[gd_scene load_steps=5 format=3 uid="uid://cxwapsvdfrtjn"]

[ext_resource type="Script" path="res://UI/Group Select/group_select.gd" id="1_qjfgo"]
[ext_resource type="Texture2D" uid="uid://ba28nvkk4dirn" path="res://Assets/Track.png" id="2_an15r"]
[ext_resource type="PackedScene" uid="uid://dsghfref041fa" path="res://UI/Group Select/BloonsTowers.tscn" id="2_vgmc0"]
[ext_resource type="Texture2D" uid="uid://dy6e32at5x3b0" path="res://Assets/arrow.png" id="11_dwq8d"]

[node name="GroupSelect" type="CanvasLayer"]
script = ExtResource("1_qjfgo")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_an15r")
metadata/_edit_lock_ = true

[node name="Panel2" type="Panel" parent="."]
offset_left = 23.0
offset_top = 28.0
offset_right = 1908.0
offset_bottom = 1052.0
metadata/_edit_lock_ = true

[node name="TowerGroup3" parent="." instance=ExtResource("2_vgmc0")]

[node name="LeftButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -921.0
offset_top = -480.0
offset_right = -770.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("11_dwq8d")
icon_alignment = 1
expand_icon = true

[node name="RightButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 921.0
offset_top = 143.0
offset_right = 1072.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
icon = ExtResource("11_dwq8d")
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -711.5
offset_top = 193.0
offset_right = 711.5
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_right = 1398.0
offset_bottom = 207.0
theme_override_constants/separation = 40

[node name="NameLabel" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 72
text = "Tower Name"
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 1.8
theme_override_font_sizes/font_size = 48
text = "A basic description of the tower"
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
offset_left = 1083.0
offset_top = 951.0
offset_right = 1581.0
offset_bottom = 1035.0
theme_override_font_sizes/font_size = 40
text = "Select"

[node name="CancelButton" type="Button" parent="."]
offset_left = 403.0
offset_top = 950.0
offset_right = 901.0
offset_bottom = 1034.0
theme_override_font_sizes/font_size = 40
text = "Cancel"

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
